<!--
  Copyright 2016 Farbod Salamat-Zadeh

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->

<resources>

    <string name="app_name">Flashcards</string>

    <string name="title_activity_main" translatable="false">@string/app_name</string>
    <string name="title_activity_subject">-Subject here-</string>
    <string name="title_activity_topic"> </string>
    <string name="title_activity_flash_card">-Topic here-</string>

    <string name="action_settings">Settings</string>
    <string name="action_reference">Reference</string>

    <string name="initialize_title">Initializing databases</string>

    <string name="button_play">Flash the cards</string>
    <string name="options">Options</string>
    <string name="spinner_cards">Number of flashcards</string>
    <string name="spinner_content">Content</string>

    <string name="flashcards_next">Next</string>
    <string name="flashcards_previous">Back</string>
    <string name="flashcards_quit">Quit</string>
    <string name="flashcards_finish">Finish</string>
    <string name="flashcards_count">%1$d / %2$d</string>
    <string name="flashcards_flip">Flip</string>

    <string name="flashcard_guide_ref" formatted="false"><![CDATA[For more information, see <b>page %d</b> of the revision guide (\"<em>%s</em>\")]]></string>
    <string name="flashcard_guide_ref_title">Revision guide reference</string>

    <string name="coming_soon">Coming soon</string>

</resources>
