<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright 2016 Farbod Salamat-Zadeh

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->

<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.satsumasoftware.flashcards.ui.TopicDetailActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            style="@style/AppStyle.Toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:background="?colorPrimary"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal">
                <View
                    android:layout_width="wrap_content"
                    android:layout_height="?actionBarSize" />
                <TextView
                    android:id="@+id/subject_text"
                    android:text="Subject"
                    android:textColor="@color/text_white_secondary"
                    android:gravity="center"
                    style="@style/AppStyle.CardView.Text.Title.Medium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/topic_text"
                    android:text="Some long topic name"
                    android:textColor="@color/text_white"
                    android:gravity="center"
                    style="@style/AppStyle.CardView.Text.Title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/mdu_spacing_micro"/>
                <Button
                    android:id="@+id/button"
                    android:text="@string/button_play"
                    style="@style/AppStyle.Button.Raised"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="54dp"
                    android:layout_marginBottom="42dp"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/viewGroup_options"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <android.support.v7.widget.CardView
                    style="@style/AppStyle.CardView.SidePadding"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="@dimen/card_padding_vertical"
                        android:paddingBottom="@dimen/card_padding_vertical_large">
                        <TextView
                            android:text="@string/options"
                            style="@style/AppStyle.CardView.Text.Title.Medium"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingBottom="@dimen/card_padding_vertical"/>
                        <com.satsuware.usefulviews.LabelledSpinner
                            android:id="@+id/spinner_content"
                            app:labelText="@string/spinner_content"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                        <com.satsuware.usefulviews.LabelledSpinner
                            android:id="@+id/spinner_cards"
                            app:labelText="@string/spinner_cards"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>
                </android.support.v7.widget.CardView>
            </LinearLayout>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>
